--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -23,6 +23,22 @@
             android:text="View">
         </Button>
 
+        <EditText
+            android:id="@+id/editText_addr"
+            android:layout_width="154dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onSearch"
+            tools:text="@android:string/search_go" />
+
     </LinearLayout>
 
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
