--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -7,6 +7,13 @@
     android:orientation="vertical">
 
     <!--Layout for the view button-->
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:onClick="trackMyLocation"
+        android:text="Track" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,7 +32,7 @@
 
         <EditText
             android:id="@+id/editText_addr"
-            android:layout_width="154dp"
+            android:layout_width="61dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
@@ -41,7 +48,14 @@
 
     </LinearLayout>
 
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:onClick="clearMarkers"
+        android:text="CLEAR" />
+
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map"
