--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="onSearch"
-            tools:text="@android:string/search_go" />
+            android:text="srch" />
 
     </LinearLayout>
 
